# roasted

./: .env  .gitignore  CHANGELOG.md  LICENSE  TODO.md  docker-compose.yml  flake.nix  roasted.cabal  shell.nix
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
scripts/: roasted.psql  roasted.sql
src/: Api.hs  Coffee.hs  Domain.hs  Main.hs  Monad.hs
src/Roasted/: Api.hs  Coffee.hs  Config.hs  Domain.hs  Monad.hs
src/Roasted/Api/: Api.hs  Coffee.hs  Util.hs
src/Roasted/Domain/: Coffee.hs  Gyro.hs  Schema.hs  Util.hs
tests/: Main.hs
