cabal-version:      3.0
name:               roasted
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Zenna Allwein
maintainer:         zrallwein@gmail.com
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
common warnings
    ghc-options: -Wall

library
    import:           warnings

    hs-source-dirs:   src

    exposed-modules:    Roasted.Api.Api
                      , Roasted.Api.Coffee
                      , Roasted.Domain.Coffee
                      , Roasted.Config
                      , Roasted.Monad
    other-modules:      Roasted.Api.Util
                      , Roasted.Domain.Gyro

    -- Other library packages from which modules are imported.
    build-depends:    base ^>=4.17.2.1
                    , aeson ^>= 2.1.0.0
                    , barbies ^>= 2.0.2
                    , hasql ^>= 1.6.4
                    , hasql-th ^>= 0.4.0.19
                    , lens ^>= 5.2.3
                    , mtl ^>= 2.2.2
                    , servant ^>= 0.20
                    , servant-server ^>= 0.20
                    , servant-swagger ^>= 1.2
                    , servant-swagger-ui ^>= 0.3.5.5.0.0
                    , swagger2 ^>= 2.8
                    , text ^>= 2.0.0

    -- Directories containing source files.
    hs-source-dirs:   src
    default-language: GHC2021

executable roasted
    -- Import common warning flags.
    import:           warnings

    -- .hs or .lhs file containing the Main module.
    main-is:          Main.hs

    -- Other library packages from which modules are imported.
    build-depends:    base ^>=4.17.2.1
                    , roasted
                    , mtl ^>= 2.2.2
                    , servant-server ^>= 0.20
                    , wai ^>= 3.2.0
                    , warp ^>= 3.3.0

    -- Directories containing source files.
    hs-source-dirs:   app

    -- Base language which the package is written in.
    default-language: GHC2021

test-suite tests
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    hs-source-dirs:     tests
    build-depends:      base ^>=4.17.2.1 
                      , barbies ^>= 2.0.2
                      , roasted
                      , hspec ^>= 2.11.7
                      , hspec-wai ^>= 0.11
                      , http-client ^>= 0.7.16
                      , mtl ^>= 2.2.2
                      , servant-server ^>= 0.20
                      , servant-client ^>= 0.20
                      , transformers ^>= 0.5.6.2
                      , wai ^>= 3.2.0
                      , warp ^>= 3.3.0
    default-language:   GHC2021
